# MCPSQLQueryOptimization

./: README.md  env_template  mcp.json  pyproject.toml  query_optimizer_mcp_client.py  query_optimizer_mcp_server.py  requirements.txt
