[project]
name = "mcpdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
mcp-use = ">=1.2.12" 
dependencies = [
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "mcp-use>=1.2.12",
    "mcp[cli]>=1.8.1",
    "mysql-connector-python>=9.3.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "python-dotenv>=1.1.0",
    "pyvis>=0.3.2",
]
